Fully adapted to VM usage